# yamake

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml
.github/workflows/: doc-test.yml  doc.yml  publish.yml  test.yml
a_demo_project_in_C/project_1/: add.h  main.c
c_example/: add.h  f.c  main.c
c_example/project_1/: add.c  main.c
demo_projects/demo_expand/: greetings.yml  main.c
demo_projects/project_1/: add.c  add.h  main.c  wrapper.h
demo_projects/project_C/: add.c  main.c  wrapper.h
demo_projects/project_expand/: graph.mermaid  languages.yml  main.c  wrapper.h
demo_projects/project_latex/: data.tex  main.tex  projectile.tikz  solo.ly
doc/: Cargo.toml  book.toml  mermaid-animate.js
doc/src/: SUMMARY.md  add_edges.md  add_nodes.md  addrule-id.md  addrule-scan.md  addrules.md  build-logs.md  capture-error.md  chapter_1.md  example.md  expand-short.md  expand.md  expand.yml  expand2.yml  generate-makefile.md  generated-nodes-steps.md  generated-nodes.md  graph-life.md  instanciate_graph.md  make.md  make_result.json  mount.md  node-life.md  plot_graph.md  recursive-makefile-considered-harmful.md  scan.md  timestamp.md  whatisit.md  workflow.md
examples/: c_project.rs
examples/c_project_demo/: main.rs
examples/expand_demo/: main.rs
examples/latex_project_demo/: main.rs
examples/project_C/: main.rs
examples/project_expand/: main.rs
geo/: Cargo.toml
geo/src/: main.rs  model.rs
scripts/: colorprint  colors.sh
src/: command.rs  doc.md  lib.rs  main.rs  make.rs  model.rs  mount.rs  tests.rs  walk.rs
src/actions/: mount.rs  node_life.rs  run.rs
src/c_nodes/: a_file.rs  c_file.rs  h_file.rs  mod.rs  o_file.rs  x_file.rs
src/helpers/: io.rs  log.rs  path.rs
test-graph/: Cargo.toml
tests/: test_buggy_ofile_wrong_output.rs  test_build_c_project.rs  test_build_c_project_auto_scan.rs  test_build_fails_with_invalid_header.rs  test_construct_and_make.rs  test_duplicate_id_error.rs  test_duplicate_pathbuf_error.rs  test_grootnode_expand.rs  test_incremental_build.rs  test_incremental_build_comment.rs  test_incremental_build_deleted_output.rs  test_incremental_build_failure.rs  test_mermaid.rs  test_mount_missing_source.rs  test_project_expand.rs  test_project_expand_deleted_lib.rs  test_project_expand_incremental.rs  test_root_predecessors.rs  test_scan_c_file_includes.rs  test_scan_fails_on_missing_header.rs  test_scan_fails_on_wrong_include_path.rs
tools/: check-public-version.sh
yamake/: Cargo.toml  Makefile  README.md
yamake/examples/: C_demo_project.rs  Latex_demo_project.rs  c_program_example.rs  foo.rs  test_log.rs
yamake/examples/c_project_demo/: main.rs
yamake/examples/expand_demo/: greetings_yml.rs  main.rs
yamake/src/: build.rs  c_build.rs  doc.md  doc2.md  error.rs  expand.rs  graph.md  graph1.md  lib.rs  make.rs  model.rs  mount.rs  pets.md  run.rs  scan.rs  target_hash.rs  test_c.rs  test_latex.rs  util.rs
yamake/src/actions/: mod.rs  mount.rs  run.rs  scan.rs
yamake/src/c_project/: c_compile.rs  c_file.rs  c_link.rs  c_scan.rs  h_file.rs  mod.rs  o_file.rs  x_file.rs
yamake/src/helpers/: log.rs  mod.rs  path.rs  relpath.rs
yamake/src/rules/: mod.rs
yamake/src/rules/c_rules/: c_file.rs  c_scan.rs  h_file.rs  mod.rs  o_file.rs
yamake/src/rules/lilypond_rules/: ly_scan.rs  lytex_file.rs  mod.rs
yamake/src/rules/tex_rules/: mod.rs  pdf_file.rs  tex_file.rs  tex_scan.rs
yamake/src/tests/: test_c.rs
(+48 files in other folders)
