[package]
name = "yamake"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
colored_text = "0.3.0"
fix_fn = "1.0.2"
futures = "0.3.31"
indicatif = "0.18.0"
log = "0.4.27"
petgraph = "0.8.2"
regex = "1.11.1"
serde = "1.0.219"
simple-logging = "2.0.2"
simple_logger = "5.0.0"
tokio = { version = "1.46.1", features = ["full"] }
walkdir = "2.5.0"


[[examples]]
path="examples/c_program_example.rs"
