[package]
name = "yamake"
version = "0.1.5"
edition = "2024"
description="yet another make tool."
license = "MIT OR Apache-2.0"
repository="https://github.com/laurentcarrie/yamake"
readme="../README.md"



[dependencies]
argh = "0.1.13"
colored_text = "0.3.0"
fix_fn = "1.0.2"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.0"
log = "0.4.27"
markdown-heading-id = "0.1.0"
mdbook = "0.4.52"
mdbook-mermaid = "0.15.0"
petgraph = { version = "0.8.2", features = ["serde_derive", "serde","all"] }
pulldown-cmark = "0.13.0"
regex = "1.11.1"
serde = {version="1.0.219",features=["serde_derive"]}
serde_json = "1.0.142"
sha2 = "0.10.9"
simple-logging = "2.0.2"
simple-mermaid = "0.2.0"
simple_logger = "5.0.0"
tempdir = "0.3.7"
tokio = { version = "1.46.1", features = ["full"] }
walkdir = "2.5.0"


[[examples]]
path="examples/C_demo_project.rs"

[[examples]]
path="examples/Latex_demo_project.rs"
